--- a/style.css
+++ b/style.css
@@ -55,11 +55,21 @@ html {
 /* gift section */
 
 .gift-section-wrapper {
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    background: url('header.png');
+    background-size: cover;
+    background-position: center;
+
 }
+
+.music-section-wrapper {
+    height: 100vh;
+    background: url('2.png');
+    background-size: cover;
+    background-position: center;
+
+}
+
 #giftSection {
     /* display: none; */
 }
@@ -98,45 +108,49 @@ html {
 #spotify_frame {
     border-radius: 12px;
     height: 50vh;
+    display: flex;
+    justify-content: center;
+    width: 60vw;
     position: relative;
-    top: 10vh;
+    top: 40vh;
+    margin: 0 auto;
 }
 
 /***** Typography ******/
 
 h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700 !important;
-  letter-spacing: 1.4px;
-  font-size: 70px !important;
-  background: -webkit-linear-gradient(#DE7373, #F5F2B8);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: #DE7373;
-  text-shadow: -0.0075em 0.0075em 0 #fef2f6, 0.005em 0.005em 0 #f6a5c1,
-  0.01em 0.01em 0 #3ecffcb4, 0.015em 0.015em #21f3ad, 0.02em 0.02em 0 #3ecffcb4,
-  0.025em 0.025em 0 #21f3ad, 0.03em 0.03em 0 #f8bcd0, 0.035em 0.035em 0 #21f3ad;
-  text-align: center;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 30px;
-  padding-bottom: 30px;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1.4px;
+    font-size: 50px !important;
+    background: -webkit-linear-gradient(#DE7373, #F5F2B8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #DE7373;
+    text-shadow: -0.0075em 0.0075em 0 #a7ddb3, 0.005em 0.005em 0 #f6a5c1, 0.01em 0.01em 0 #3ecffcb4, 0.015em 0.015em #21f3ad, 0.02em 0.02em 0 #3ecffcb4, 0.025em 0.025em 0 #21f3ad, 0.03em 0.03em 0 #f8bcd0, 0.035em 0.035em 0 #21f3ad;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 57px;
+    padding-bottom: 30px;
 }
 
 h2 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  letter-spacing: 1.4px;
-  font-size: 60px;
-  color: var(--main-white) !important;
-  font-size: 34px;
-  text-align: center;
-  padding-top: 1vh;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 1vh;
-  position: relative;
-  bottom: 15vh;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    letter-spacing: 1.4px;
+    font-size: 60px;
+    color: var(--main-white) !important;
+    font-size: 34px;
+    text-align: center;
+    padding-top: 1vh;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 1vh;
+    position: relative;
+    top: -110px;
+    background:#65BAA8;
+    width: fit-content;
+    margin: 0 auto;
 }
 
 h3 {
@@ -171,6 +185,8 @@ p {
     font-size: 1.6rem;
     line-height: 1.6;
     color: var(--main-light-green);
+    width: 75vw;
+    margin: 0 auto;
 }
 
                                     /**** SECTIONS *****/
@@ -215,11 +231,10 @@ p {
     align-items: center;
 }
 
-.intro-section > p {
-    font-family: 'Montserrat', sans-serif;
-    color: var(--main-white);
-    width: 75vw;
-}
+/* .intro-section > p {
+    width: 75vw !important;
+    margin: 0 auto !important;
+} */
 
 @media (max-width: 46.50em) {
   .intro-section > p {
@@ -465,7 +480,6 @@ and (max-device-width: 480px) {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100vh;
     background: url('background_synth_001.png');
@@ -704,9 +718,11 @@ body, button, input {
 }
 
 .screen {
-  position: relative;
-  background: var(--main-gray);
-  min-width: 80vw;
+    position: relative;
+    background: var(--main-gray);
+    min-width: 80vw;
+    top: 20vh;
+    height: 40vh;
 }
 
 .screen:after {
