--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
   /* background: linear-gradient(180deg, #ff6d6d  0%,  #DE7373  77%); */
   background-repeat: no-repeat;
   background: var(--main-gray) !important;
+  width: 60vw;
+  margin: 0 auto !important;
 }
 
 /* body {
@@ -54,30 +56,7 @@ html {
 
 /* gift section */
 
-.gift-section-wrapper {
-    height: 100vh;
-    background: url('header.png');
-    background-size: cover;
-    background-position: center;
 
-}
-
-.music-section-wrapper {
-    height: 100vh;
-    background: url('2.png');
-    background-size: cover;
-    background-position: center;
-
-}
-
-#giftSection {
-    /* display: none; */
-}
-
-#giftSection li {
-    color:#65BAA8;
-    font-size: 20px;
-}
 
 /* musiv playa */
 #music-player {
@@ -107,13 +86,11 @@ html {
 
 #spotify_frame {
     border-radius: 12px;
-    height: 50vh;
-    display: flex;
-    justify-content: center;
     width: 60vw;
-    position: relative;
-    top: 40vh;
+    position: absolute;
     margin: 0 auto;
+    z-index: 2;
+    top: 30px;
 }
 
 /***** Typography ******/
@@ -142,12 +119,6 @@ h2 {
     color: var(--main-white) !important;
     font-size: 34px;
     text-align: center;
-    padding-top: 1vh;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 1vh;
-    position: relative;
-    top: -110px;
     background:#65BAA8;
     width: fit-content;
     margin: 0 auto;
@@ -184,396 +155,138 @@ p {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.6rem;
     line-height: 1.6;
-    color: var(--main-light-green);
-    width: 75vw;
+    color: var(--main-white);
+    width: 60vw;
     margin: 0 auto;
+    background: var(--main-red);
+    z-index: 2;
 }
 
-                                    /**** SECTIONS *****/
+/**** SECTIONS *****/
 
-
-                                    /**** Welcome Section */
-
-.welcome-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  /* background: var(--main-gray); */
-  /* background-image: url("computer-floating.jpg"); */
-  /* background-image: url("gradient.jpeg"); */
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+.gift-section-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
-.welcome-section-header {
-  text-align: left;
-  max-width: 640px;
-  margin: 0 auto 0 auto;
-  color: var(--main-light-green);
+.gift-section-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60vw;
+    object-fit: cover; 
+    z-index: 1;
 }
 
-@media (max-width: 28.75em) {
-  .welcome-section-header {
-    font-size: 4rem;
-  }
+.gift-section-wrapper h2 {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
-    /**** Intro Section *****/
+#giftSection {
+    /* display: none; */
+}
+
+#giftSection li {
+    color:#65BAA8;
+    font-size: 20px;
+}
+
+/**** about Section *****/
 
 .intro-section {
+    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    height: 100vh;
-    align-items: center;
-}
-
-/* .intro-section > p {
-    width: 75vw !important;
-    margin: 0 auto !important;
-} */
-
-@media (max-width: 46.50em) {
-  .intro-section > p {
-    padding-left: 8%;
-    padding-right: 8%;
-    text-align: left;
-  }
-}
-
-
-@media (max-width: 46.50em) {
-  .intro-section {
-    height: 100vh;
-  }
-}
-
-@media (max-width: 28.75em) {
-  .intro-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    width: 100%;
-    height: 300vh;
-  }
-}
-
-@media screen and (orientation:landscape)
-and (min-device-width: 319px)
-and (max-device-width: 480px) {
-  .intro-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    height: 400vh;
-  }
-}
-
-                              /**** 3D DJ Section *****/
-
-.dj-section {
-display: flex;
-flex-direction: column;
-justify-content: left;
-width: 100%;
-height: 150vh;
-}
-
-.dj-section > p {
-font-family: 'Montserrat', sans-serif;
-font-size: 1.6rem;
-padding-left: 25%;
-padding-right: 25%;
-padding-bottom: 2.5vh;
-text-align: left;
-color: var(--main-white);
-}
-
-@media (max-width: 46.50em) {
-.dj-section > p {
-padding-left: 8%;
-padding-right: 8%;
-text-align: left;
-}
-}
-.dj-section-header > h1 {
-text-align: center;
-padding-top: 60px;
-padding-bottom: 6rem;
-max-width: 640px;
-margin: 0;
-color: var(--main-white);
-}
-
-@media (max-width: 46.50em) {
-.dj-section {
-height: 200vh;
-}
-}
-
-@media (max-width: 28.75em) {
-.dj-section {
-display: flex;
-flex-direction: column;
-justify-content: left;
-width: 100%;
-height: 300vh;
-}
-}
-
-@media screen and (orientation:landscape)
-and (min-device-width: 319px)
-and (max-device-width: 480px) {
-.dj-section {
-display: flex;
-flex-direction: column;
-justify-content: left;
-height: 400vh;
-}
-}
-
-                                /**** Projects Section ****/
-
-.project-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  width: 100%;
-  height: 175vh;
-}
-
-@media (max-width: 46.50em) {
-  .project-section {
-    height: 200vh;
-  }
-}
-
-@media (max-width: 28.75em) {
-
-  .project-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    width: 100%;
-    height: 200vh;
-  }
-}
-@media screen and (orientation:landscape)
-and (min-device-width: 319px)
-and (max-device-width: 480px) {
-  .project-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    height: 400vh;
-  }
-}
-
-                                /*** Clipboard Section ******/
-.clipboard-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  width: 100%;
-  height: 80vh;
-}
-
-.clipboard-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: left;
-}
-
-                                /*** Clipboard Tooltip ****/
-.tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 140px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px;
-  position: absolute;
-  z-index: 1;
-  bottom: 150%;
-  left: 50%;
-  margin-left: -75px;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-
-                                /*** Weird Ball Section *****/
-
-.canvas-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  width: 100%;
-  height: 100vh;
-}
-
-.canvas-section > p {
-  font-family: 'Work Sans';
-  font-size: 1.6rem;
-  padding-left: 25%;
-  padding-right: 25%;
-  padding-bottom: 1.5vh;
-  text-align: center;
-  color: var(--main-gray);
-}
-
-.canvas-section-header > h2 {
-  text-align: center;
-  padding-top: 60px;
-  padding-bottom: 6rem;
-  max-width: 640px;
-  margin: 0;
-  color: var(--main-white);
-}
-
-@media (max-width: 46.50em) {
-  .canvas-section {
-    height: 150vh;
-  }
-}
-
-@media (max-width: 28.75em) {
-
-  .canvas-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
     width: 100%;
     height: 100vh;
-  }
 }
 
+.intro-section img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60vw;
+    object-fit: cover; 
+    z-index: 1;
+}
+
+.intro-section h2 {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+ 
 /**** Contact Section ****/
 
 .contact-section {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background: url('background_synth_001.png');
-    background-size: cover;
 }
 
-.contact-section-header {
-  text-align: left;
-  max-width: 640px;
-  margin: 0 auto 0 auto;
-  color: var(--main-light-green);
+.contact-section h2 {
+    z-index: 2;
+    position: absolute;
+    top: 0;
 }
-
-@media (max-width: 46.50em) {
-  .contact-section {
-    height: 100vh;
-  }
-}
-
-@media (max-width: 28.75em) {
-  .contact-section {
-    height: 100vh;
-  }
-}
-@media screen and (orientation:landscape)
-and (min-device-width: 319px)
-and (max-device-width: 480px) {
-  .contact-section {
+.form-section {
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: left;
+    justify-content: center;
+    width: 100%;
     height: 100vh;
-  }
 }
 
- .butn-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
+.contact-section img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60vw;
+    object-fit: cover; 
+    z-index: 1;
 }
 
- .butn {
-  background: var(--main-white);
-  -webkit-border-radius: 60;
-  -moz-border-radius: 60;
-  border-radius: 0px;
-  border-color: #000;
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 1.4px;
-  font-weight: bold;
-  color: #000 !important;
-  font-size: 18px;
-  font-weight: bold !important;
-  padding: 10px 60px 10px 60px;
-  text-decoration: none;
-  max-width: 70%;
-  min-width: 50%;
+/* music section */
+
+
+.music-section-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
-.butn:hover {
-  background: #3cb0fd;
-  text-decoration: none;
+.music-section-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60vw;
+    object-fit: cover; 
+    z-index: 1;
 }
 
-@media (max-width: 30.625em) {
-  .butn {
-    border-radius: 0px;
-    border-color: #000;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    padding: 5px 60px 5px 60px;
-    color: #000 !important;
-    font-size: 14px;
-    font-weight: bolder !important;
-    max-width: 70%;
-    min-width: 70%;
-  }
-}
-@media (max-width: 50.625em) {
-  .butn {
-    border-radius: 0px;
-    border-color: #000;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    padding: 5px 60px 5px 60px;
-    color: #000 !important;
-    font-size: 14px;
-    font-weight: bolder !important;
-    max-width: 70%;
-    min-width: 70%;
-  }
+.music-section-wrapper h2 {
+    z-index: 2;
+    position: absolute;
+    top: 0;
 }
 
+/* end sections */
 
                             /***** Links Rules ******/
 a {
@@ -718,11 +431,14 @@ body, button, input {
 }
 
 .screen {
-    position: relative;
+    position: absolute;
+    top: 0;
     background: var(--main-gray);
-    min-width: 80vw;
-    top: 20vh;
+    min-width: 60vw;
+    width: 60vw; 
+    /* top: 20vh; */
     height: 40vh;
+    z-index: 2;
 }
 
 .screen:after {
@@ -730,8 +446,8 @@ body, button, input {
   display: block;
   position: absolute;
   top: 0;
-  left: 20px;
-  right: 20px;
+  /* left: 20px;
+  right: 20px; */
   bottom: 0;
   border-radius: 15px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
