--- a/style.css
+++ b/style.css
@@ -164,6 +164,53 @@ p {
 
 /**** SECTIONS *****/
 
+.clickable-image {
+    cursor: pointer;
+  }
+  
+  .spin-card {
+    width: 100% !important;
+    height: 100% !important;
+    position: relative !important;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+  }
+  
+  .spin-card.flipped {
+    transform: rotateY(180deg);
+  }
+  
+  .front, .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+  }
+  
+  .back {
+    transform: rotateY(180deg);
+    /* display: none; */
+  }
+  
+  .hidden {
+    display: none;
+  }
+
+  .form-container {
+    position: relative;
+    top: -40vh;;
+    left: -140vw; /* Initially hide the form outside the viewport */
+    width: 60vw; /* Adjust form width as needed */
+    height: 100%;
+    background-color: transparent;
+    transition: left 0.5s;
+    z-index: 999;
+  }
+  
+  .form-open {
+    left: 0;
+  }
+
 .gift-section-wrapper {
     position: relative;
     display: flex;
@@ -190,12 +237,39 @@ p {
 }
 
 #giftSection {
-    /* display: none; */
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+#giftSection img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60vw;
+    object-fit: cover; 
+    z-index: 1;
+}
+
+#giftSection h2 {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #giftSection li {
     color:#65BAA8;
     font-size: 20px;
+}
+
+#giftSection p {
+    height: 100%;
+    text-align: left !important;
+
 }
 
 /**** about Section *****/
@@ -259,7 +333,24 @@ p {
     z-index: 1;
 }
 
+
 /* music section */
+
+.download-link {
+    background: transparent;
+    color: var(--main-white);
+    border-radius: 5px;
+    display: inline-block;
+    margin-left: auto;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+svg {
+    margin-left: 5px;
+}
+.download-link:hover {
+    color: #fff;
+}
 
 
 .music-section-wrapper {
@@ -390,7 +481,6 @@ body input ~ nav > ul > li > a {
   font-weight: 700;
   font-family: sans-serif;
   display: block;
-  padding: 20px;
 }
 body input:checked ~ nav {
   height: 50%;
@@ -436,7 +526,7 @@ body, button, input {
     background: var(--main-gray);
     min-width: 60vw;
     width: 60vw; 
-    /* top: 20vh; */
+    top: 10vh;
     height: 40vh;
     z-index: 2;
 }
