--- a/style.css
+++ b/style.css
@@ -217,7 +217,9 @@ p {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    top: 10vh;
+    margin-bottom: 10vh;
 }
 
 .gift-section-wrapper img {
@@ -242,7 +244,9 @@ p {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    top: 10vh;
+    margin-bottom: 10vh;
 }
 
 #giftSection img {
@@ -280,7 +284,9 @@ p {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    top: 10vh;
+    margin-bottom: 10vh;
 }
 
 .intro-section img {
@@ -307,7 +313,9 @@ p {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    top: 10vh;
+    margin-bottom: 10vh;
 }
 
 .contact-section h2 {
@@ -338,7 +346,7 @@ p {
 
 .download-link {
     background: transparent;
-    color: var(--main-white);
+    color: var(--main-white) !important;
     border-radius: 5px;
     display: inline-block;
     margin-left: auto;
@@ -359,7 +367,9 @@ svg {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    top: 10vh;
+    margin-bottom: 10vh;
 }
 
 .music-section-wrapper img {
@@ -678,23 +688,27 @@ p {
 }
 
 .gift-section-wrapper,
-.music-section-wrapper {
-    height: 50vh;
+.music-section-wrapper, #giftSection {
+    height: 100vh;
 }
-.form-section {
-    height: 50vh;
+.form-section, .intro-section {
+    height: 100vh;
 }
 .gift-section-wrapper img,
 .contact-section img,
+.intro-section img,
 .form-section img,
-.music-section-wrapper img {
+.music-section-wrapper img,
+#giftSection img {
+    width: 100vw;
+    height: 100vh;
+}
+.contact-section .form-container {
+    left: 0;;
     width: 100vw;
 }
-.intro-section img {
-    display: none;
-}
   .screen {
-    min-width: 75vw;
+    /* min-width: 75vw; */
   }
   .screen-body {
     flex-direction: column;
