--- a/style.css
+++ b/style.css
@@ -549,7 +549,7 @@ body, button, input {
     width: 60vw; 
     top: 10vh;
     height: 40vh;
-    z-index: 2;
+    /* z-index: 2; */
 }
 
 .screen:after {
