--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ ul {
 
 body input + label {
   position: fixed;
-  top: 40px;
+  /* top: 40px; */
   right: 40px;
   height: 20px;
   width: 15px;
