--- a/style.css
+++ b/style.css
@@ -118,17 +118,30 @@ h1 {
     padding-bottom: 30px;
 }
 
+@keyframes colorChange {
+  0%, 49.99% {
+    background: #65BAA8;
+    color: var(--main-white);
+  }
+  50%, 100% {
+    background: var(--main-red);
+    color: var(--main-gray);
+  }
+}
+
 h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    letter-spacing: 1.4px;
-    font-size: 60px;
-    color: var(--main-white) !important;
-    font-size: 34px;
-    text-align: center;
-    background:#65BAA8;
-    width: fit-content;
-    margin: 0 auto;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  letter-spacing: 1.4px;
+  text-align: center;
+  width: fit-content;
+  margin: 0 auto;
+
+  /* Animation properties */
+  animation-name: colorChange;
+  animation-duration: 8s;
+  animation-timing-function: steps(1, end);
+  animation-iteration-count: infinite;
 }
 
 h3 {
@@ -224,7 +237,7 @@ p {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     /* margin-top: 10vh; */
     margin-bottom: 30vh;
 }
@@ -448,7 +461,7 @@ body input + label span {
   width: 150%;
   height: 3px;
   top: 50%;
-  margin-top: -1px;
+  margin-top: 0px;
   left: 0;
   display: block;
   background: var(--main-white);
